--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,8 @@
 
 <a href="https://docs.google.com/document/d/1e-BG0CnPcL22_ZYl3Xsb5fO_A5QI_0bZGO0yxicVznU/edit?usp=sharing">Click to our Journal!</a>
 
-<img src="SideishView.jpg">
-<img src="SideTopDown.jpg">
-<img src="FullBotWithExpansion.jpg">
+<img src="IMG_2024.jpg">
+<img src="IMG_2023.jpg">
+<img src="IMG_1715.jpg">
+ 
 </html>
