--- a/Index.html
+++ b/Index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
+  <body>
+  <link rel="stylesheet" href="style.css">
  <h1>3249D Droid Diminish - 2022-2023 - Spin Up</h1>
 
 <h3>About Our Team</h3>
- <p>3249D is mainly built on 3 core members, Van Metz &#40; Was Controller, got injured first match so is now team leader &#41;. Benjamin Johnson is the main coder and subbed for Van. Zeyen Jorgensen is the main builder along with Caiden Conboy and Malachi Haynes. Caiden Conboy was a builder but he was playing games and was asked to leave. Malachi Haynes was a great addition to our team&#44; however he got less intrested in robotics as a whole and decided it was best to leave. </p>
-
-<h3>About Our Bot</h3>
-<p>Our Robot &#40;unofficialy named The Dissapointed &#40; see Fun Facts For more on this reasoning&#41; &#41; it was meant to intake from the front and shoot from the back but we had some problems with the team before we can do anything in time. so our bot was a puch but with a 4 motor drivetrain and uses 20% battery per use. letting us test our bot in between our qualification rounds while fitting in the 3 batteries we where given. we also have a couple iterations of our expansions, for starters we thought of a centerfugal force expansion that while the thing spins up, the sting launches outward, this however, did not work and couldnt stay inside the center long enough to actually get intertia. then we binged on youtube for long enough my youtube recommnended wasnt the same ever agian. we found a catapult system that launches a weight tied with string onto the feild. this worked but we couldnt find a way to hold the rubber bands in time for our last tourney at mollala high. so we attached a high speed motor to the axle that held the carrage of the catapult and it worked for like a tile or two ahead, i later after 3249D time was up, made a system that kept the wieght in the carrage and let it launch far, far as in the entire feild. </p>
-
-<h3>Fun Fact!</h3>
-<p>Our Team was Originally supposed to be called The Dissapointments as a reffrence to this year being our first year in vex. sadly it was turned down in the spirit of the game.</p>
-
-<a href="https://docs.google.com/document/d/1e-BG0CnPcL22_ZYl3Xsb5fO_A5QI_0bZGO0yxicVznU/edit?usp=sharing">Click to our Journal!</a>
-
+ <p style="line-height: 1.5;"> 3249D is mainly built on 3 core members, Van Metz &#40; Was Controller, got injured first match so is now team leader &#41;. Benjamin Johnson is the main coder and subbed for Van. Zeyen Jorgensen is the main builder along with Caiden Conboy and Malachi Haynes. Caiden Conboy was a builder but he was playing games and was asked to leave. Malachi Haynes was a great addition to our team&#44; however he got less intrested in robotics as a whole and decided it was best to leave. </p>
 <img src="IMG_2024.jpg"width="580" 
      height="580">
+
+    
+<h3>About Our Bot</h3>
+<p style="line-height: 1.5;">Our Robot &#40;unofficialy named The Dissapointed &#40; see Fun Facts For more on this reasoning&#41; &#41; it was meant to intake from the front and shoot from the back but we had some problems with the team before we can do anything in time. so our bot was a puch but with a 4 motor drivetrain and uses 20% battery per use. letting us test our bot in between our qualification rounds while fitting in the 3 batteries we where given. we also have a couple iterations of our expansions, for starters we thought of a centerfugal force expansion that while the thing spins up, the sting launches outward, this however, did not work and couldnt stay inside the center long enough to actually get intertia. then we binged on youtube for long enough my youtube recommnended wasnt the same ever agian. we found a catapult system that launches a weight tied with string onto the feild. this worked but we couldnt find a way to hold the rubber bands in time for our last tourney at mollala high. so we attached a high speed motor to the axle that held the carrage of the catapult and it worked for like a tile or two ahead, i later after 3249D time was up, made a system that kept the wieght in the carrage and let it launch far, far as in the entire feild. </p>
+    <img src="IMG_1715.jpg" width="580" 
+     height="580">
+
+<h3>Fun Fact!</h3>
+<p style="line-height: 1.5;">Our Team was Originally supposed to be called The Dissapointments as a reffrence to this year being our first year in vex. sadly it was turned down in the spirit of the game.</p>
+
+<a href="https://docs.google.com/document/d/1e-BG0CnPcL22_ZYl3Xsb5fO_A5QI_0bZGO0yxicVznU/edit?usp=sharing">Click to our Journal!</a>
+<p>&nbsp;</p>
+<a href="3249 d robotics journal.pdf">click to download our journal! (may not work)</a>
+
+
 <img src="IMG_2023.jpg"width="580" 
      height="580">
-<img src="IMG_1715.jpg" width="580" 
-     height="580">
+
  
 <h6>This page was made by Ben from 3249D!</h6>
+  </body>
 </html>
